--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,27 @@
-.App {
+
+h1{
+  color: rebeccapurple;
   text-align: center;
+  text-decoration: slateblue;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-.App-logo2{
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 10s linear;
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo2 {
-    animation: App-logo-spin2 infinite 10s linear;
-  }
-}
-
-.App-header {
-  background-color: #ee390c;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(270deg);
-  }
-}
-
-@keyframes App-logo-spin2 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
-  }
-}
-
-.sitename{
-  background-color: #ee390c;
+p{
+  color: rebeccapurple;
   text-align: center;
-  align-items: center;
+  text-decoration: slateblue;
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+.card{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  margin: 20px;
+  padding: 20px;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: rgba(187, 255, 0, 0.432);
+}
+.card:hover {
+  box-shadow: 
+0 8px 16px 0 rgba(39, 202, 47, 0.411);
 }
