--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-
-h1{
+h1 {
   color: rebeccapurple;
   text-align: center;
   text-decoration: slateblue;
 }
-p{
+
+p {
   color: rebeccapurple;
   text-align: center;
   text-decoration: slateblue;
@@ -12,8 +12,9 @@ p{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
-.card{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 20px;
   padding: 20px;
@@ -21,7 +22,7 @@ p{
   border-radius: 10px;
   background-color: rgba(187, 255, 0, 0.432);
 }
+
 .card:hover {
-  box-shadow: 
-0 8px 16px 0 rgba(39, 202, 47, 0.411);
+  box-shadow: 0 8px 16px 0 rgba(39, 202, 47, 0.411);
 }
